# Learner

./: .gitignore  README.md  fmk  fmk.sh  gcmake.sh  ghtml.rb  gitter.sh  lnkr.sh  php_projects
ansible-projects/: test.yml  yaml-reader.rb
ansible-projects/ch00/: hosts
asm-projects/: myexit.s
bash-projects/: cmaker
bash-projects/ch00/: backup_script.bash  first_script.bash  substitution.sh  substitution_proj.sh  substitution_proj2.sh
bash-projects/ch01/: arithmetic.sh  dm.sh  filereader.cpp  filereader.py  filereader.sh  numbers.sh
bash-projects/ch02/: prac_opt_praser.sh  sa
c++-projects/: Pipfile  int_util.cpp  int_util.h  make-c.py  mode-makefile.py  playgd.cod  playgd.py
c++-projects/ch00/: add-two-number  add-two-number.cpp  prog1  prog1.cpp  read_from_input_stream  read_from_input_stream.cpp  sum-numbers  sum-numbers.cpp
c++-projects/ch01/: count_vowel  count_vowel.cpp  err_prac.cpp  prac_array.cpp  prac_array2.cpp  prac_basic.cpp  prac_basic2.cpp  prac_string.cpp  prac_vector.cpp  repeater.cc
c++-projects/ch02/: exec1.cpp  swapper.cpp
c++-projects/ch03/: mmoney  money.cpp  money.h  money.py  money_main.cpp  money_main.py  person.cpp  playground1.cod  playground2  (+3 more)
c++-projects/ch13/prac_abstract_cl2/: CMakeLists.txt
c++-projects/ch13/prac_abstract_cl2/src/: bicycle.cpp  car.cpp  main.cpp  routeplanner.cpp  routestrategy.cpp  routestrategy.h  transport.cpp  transport.h
cs-projects/: c# areas to focus  makeCWeb.sh  makecs.rb  makecs.sh  makecweb.sh
flask-project/: Pipfile
ruby-projects/: ios.rb
swift-projects/: mode-swift-makefile.sh
(+309 files in other folders)
